- New object: Roof (toontowner.scenery_small.ttrfwd01)
- New object: Roof (toontowner.scenery_small.ttrfwd02)
- New object: Roof (toontowner.scenery_small.ttrfwd03)
- New object: Roof (toontowner.scenery_small.ttrfwd04)
- New object: Roof (toontowner.scenery_small.ttrfwd06)
- New object: Roof (toontowner.scenery_small.ttrfwd07)
- New object: Roof (toontowner.scenery_small.ttrfwd08)
- New object: Vine Tree (rct2ww.scenery_small.1x1atre2)
- New object: Roman Palace Corner Piece (rct2tt.scenery_large.corns2x2)
- New object: Small Speaker (rct2tt.scenery_small.speakr01)
- Fixed object: Incense Cedar Tree (rct2.scenery_small.tic)
- Fixed object: Lawson Cypress Tree (rct2.scenery_small.tlc)
- Fixed object: Monterey Cypress Tree (rct2.scenery_small.tmc)
- Fixed object: Monkey-Puzzle Tree (rct2.scenery_small.tmp)
- Fixed object: Italian Cypress Tree (rct2.scenery_small.titc)
- Fixed object: Golden Hinoki Cypress Tree (rct2.scenery_small.tghc)
- Fixed object: Arizona Cypress Tree (rct2.scenery_small.tac)
- Fixed object: Meyer's Blue Juniper Tree (rct2.scenery_small.tmbj)
- Fixed object: Cedar of Lebanon Tree (rct2.scenery_small.tcl)
- Fixed object: European Larch Tree (rct2.scenery_small.tel)
- Fixed object: Aleppo Pine Tree (rct2.scenery_small.tap)
- Fixed object: Scots Pine Tree (rct2.scenery_small.tsp)
- Fixed object: Montezuma Pine Tree (rct2.scenery_small.tmzp)
- Fixed object: Corsican Pine Tree (rct2.scenery_small.tcrp)
- Fixed object: Black Poplar Tree (rct2.scenery_small.tbp)
- Fixed object: Lombardy Poplar Tree (rct2.scenery_small.tlp)
- Fixed object: White Poplar Tree (rct2.scenery_small.twp)
- Fixed object: Aspen Tree (rct2.scenery_small.tas)
- Fixed object: Magnolia Tree (rct2.scenery_small.tmg)
- Fixed object: Weeping Willow Tree (rct2.scenery_small.tww)
- Fixed object: Silver Birch Tree (rct2.scenery_small.tsb)
- Fixed object: Voss's Laburnam Tree (rct2.scenery_small.tvl)
- Fixed object: Common Yew Tree (rct2.scenery_small.tcy)