@@ -13,6 +13,7 @@
             "$DAT:0C58B301|IRBALL2C",
             "rct2.scenery_small.helmet1",
             "rct2.scenery_small.ball3",
+            "fidwell.scenery_small.ball3",
             "rct2.scenery_large.badrack",
             "rct2.scenery_wall.wallbadm",
             "rct2.scenery_small.badshut",
