@@ -1,0 +1,46 @@
+{
+    "id": "fidwell.scenery_small.ball3",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 15,
+        "removalPrice": -10,
+        "cursor": "CURSOR_STATUE_DOWN",
+        "height": 40,
+        "shape": "4/4",
+        "isStackable": true,
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -23, "y": -40 },
+      { "path": "images/1.png", "x": -23, "y": -40 },
+      { "path": "images/2.png", "x": -23, "y": -40 },
+      { "path": "images/3.png", "x": -23, "y": -40 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Football",
+            "en-US": "Soccer Ball",
+            "de-DE": "Fußball",
+            "es-ES": "Fútbol",
+            "it-IT": "Pallone",
+            "nl-NL": "Voetbal",
+            "sv-SE": "Fotboll",
+            "ko-KR": "축구",
+            "zh-CN": "足球",
+            "zh-TW": "足球",
+            "pt-BR": "Bola de Futebol",
+            "cs-CZ": "Fotbal",
+            "ja-JP": "フットボール",
+            "pl-PL": "Piłka futbolowa",
+            "ru-RU": "Мяч",
+            "fr-FR": "Ballon de football",
+            "eo-ZZ": "Piedpilko",
+            "ca-ES": "Futbol",
+            "fi-FI": "Jalkapallo"
+        }
+    }
+}
